cmake_minimum_required(VERSION 3.3)
project(contest)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    "AOJ-ALDS/ALDS1_10_A - コピー.cpp"
    AOJ-ALDS/ALDS1_10_A.cpp
    "AOJ-ALDS/ALDS1_10_B - コピー.cpp"
    AOJ-ALDS/ALDS1_10_B.cpp
    AOJ-ALDS/ALDS1_10_B_list.cpp
    AOJ-ALDS/ALDS1_10_C.cpp
    AOJ-ALDS/ALDS1_10_C_demo.cpp
    AOJ-ALDS/ALDS1_11_A.cpp
    AOJ-ALDS/ALDS1_11_B.cpp
    AOJ-ALDS/ALDS1_11_Bstack.cpp
    AOJ-ALDS/ALDS1_11_C.cpp
    AOJ-ALDS/ALDS1_11_D.cpp
    AOJ-ALDS/ALDS1_12_A.cpp
    AOJ-ALDS/ALDS1_12_B.cpp
    AOJ-ALDS/ALDS1_12_C.cpp
    AOJ-ALDS/ALDS1_13_A.cpp
    AOJ-ALDS/ALDS1_13_B.cpp
    AOJ-ALDS/ALDS1_13_C.cpp
    AOJ-ALDS/ALDS1_13_cc.cpp
    AOJ-ALDS/ALDS1_14_A.cpp
    AOJ-ALDS/ALDS1_14_B.cpp
    AOJ-ALDS/ALDS1_14_C.cpp
    AOJ-ALDS/ALDS1_14_D.cpp
    AOJ-ALDS/ALDS1_14_Dsimple.cpp
    AOJ-ALDS/ALDS1_1_A.cpp
    AOJ-ALDS/ALDS1_1_B.cpp
    AOJ-ALDS/ALDS1_1_C.cpp
    AOJ-ALDS/ALDS1_1_D.cpp
    AOJ-ALDS/ALDS1_2_A.cpp
    AOJ-ALDS/ALDS1_2_B.cpp
    AOJ-ALDS/ALDS1_2_C.cpp
    AOJ-ALDS/ALDS1_2_D.cpp
    AOJ-ALDS/ALDS1_3_A.cpp
    AOJ-ALDS/ALDS1_3_B.cpp
    AOJ-ALDS/ALDS1_3_C.cpp
    AOJ-ALDS/ALDS1_3_D.cpp
    AOJ-ALDS/ALDS1_4_A.cpp
    AOJ-ALDS/ALDS1_4_B.cpp
    AOJ-ALDS/ALDS1_4_C.cpp
    AOJ-ALDS/ALDS1_4_D.cpp
    AOJ-ALDS/ALDS1_4_D2.cpp
    AOJ-ALDS/ALDS1_4_D2.h
    AOJ-ALDS/ALDS1_4_Db.cpp
    AOJ-ALDS/ALDS1_5_A.cpp
    AOJ-ALDS/ALDS1_5_B.cpp
    AOJ-ALDS/ALDS1_5_C.cpp
    AOJ-ALDS/ALDS1_5_D.cpp
    AOJ-ALDS/ALDS1_6_A.cpp
    AOJ-ALDS/ALDS1_6_B.cpp
    AOJ-ALDS/ALDS1_6_C.cpp
    AOJ-ALDS/ALDS1_6_D.cpp
    AOJ-ALDS/ALDS1_7_A.cpp
    AOJ-ALDS/ALDS1_7_B.cpp
    AOJ-ALDS/ALDS1_7_C.cpp
    AOJ-ALDS/ALDS1_7＿D.cpp
    AOJ-ALDS/ALDS1_8_A.cpp
    AOJ-ALDS/ALDS1_8_Aa.cpp
    AOJ-ALDS/ALDS1_8_B.cpp
    AOJ-ALDS/ALDS1_8_C.cpp
    AOJ-ALDS/ALDS1_9_A.cpp
    AOJ-ALDS/ALDS1_9_B.cpp
    AOJ-ALDS/ALDS1_9_C.cpp
    AOJ-ALDS/compare.cpp
    AOJ-ALDS/comparesub.cpp
    AOJ-ALDS/comparsearch.cpp
    AOJ-ALDS/HighwayExpressBus.cpp
    AOJ-ALDS/ITP1_11_D.cpp
    AOJ-ALDS/ITP1_7_D.cpp
    AOJ-ALDS/ITP1_8_A.cpp
    AOJ-ALDS/ITP1_8_B.cpp
    "AOJ-ALDS/jiro_to_sake のコピー.cpp"
    AOJ-ALDS/jiro_to_sake.cpp
    AOJ-ALDS/KMP.cpp
    AOJ-ALDS/mergesortALDS.cpp
    2-1.cpp
    2-1_BFS.cpp
    2-2greedy.cpp
    2-3_knapsap.cpp
    2-5_Dijkstra.cpp
    2-5graph.cpp
    2-5prim.cpp
    ABC07[C].cpp
    "ABC20[C](missed).cpp"
    ABC61[D]_BF.cpp
    aoj0071_DFS.cpp
    AOJ0588_dfs.cpp
    AOJ1052_greedy.cpp
    AOJdp.cpp
    ARC37-unionfind.cpp
    atcoder61[D].cpp
    bellman_ford.cpp
    coinprobrem.cpp
    graphDFS.cpp
    int_sieve.cpp
    int_util.cpp
    modpow.cpp
    POG2386_8gridsearch.cpp
    poj1182.cpp
    POJ2431.cpp
    POJ3069_greedy.cpp
    POJ3253.cpp
    POJ3253_pq.cpp
    POJ3617_greedy.cpp
    POJ3723.cpp
    union-find-tree.cpp)

add_executable(contest ${SOURCE_FILES})